added articles, reduced junk and clutter, polished a lot of things

--- a/_harpapp/public/a/about.jade
+++ b/_harpapp/public/a/about.jade
@@ -1,6 +1,7 @@
 h1 About
 
-img(src="/img/10410984_688582481190669_9113513446670072781_n.jpg")
+div.picme 
+  img(src="/img/10410984_688582481190669_9113513446670072781_n.jpg")
 
 <br><br><br>
 
@@ -8,11 +9,13 @@ article!= partial("about-text")
 
 <br>
 
-ul.majorlist
-  li: a(href="https://twitter.com/_ndrw") Twitter
-  li: a(href="http://linkedin.com/in/andrewnonumbers") LinkedIn
-  li: a(href="http://instagram.com/andrewnonumbers") Instagram
-  li: a(href="http://www.flickr.com/photos/andrewnonumbers/sets") Flickr
-  li: a(href="mailto:andrewnonumbers+site@gmail.com") Email Me
+div.personallinks
+  ul.majorlist
+    li: a(href="https://twitter.com/_ndrw") Twitter
+    li: a(href="http://linkedin.com/in/andrewnonumbers") LinkedIn
+    li: a(href="http://instagram.com/andrewnonumbers") Instagram
+    li: a(href="http://www.flickr.com/photos/andrewnonumbers/sets") Flickr
+    li: a(href="/resume") Resume
+    li: a(href="mailto:andrewnonumbers+site@gmail.com") Email Me
 
 <br><br><br><br>
