--- a/_harpapp/public/articles/index.jade
+++ b/_harpapp/public/articles/index.jade
@@ -1,34 +1,37 @@
 
 h2 Articles
 
+div.articleindex
+	ul.majorlist
+		li More writing will be added here after I figure out a way to manage and display them efficiently.
+
+	h3 Lists
+	ul.majorlist
+		li: a(href="/articles/how-to-be-a-designer.html") How to be a UX/product designer
+		li: a(href="/articles/one-line-book-reviews.html") One-line UX book beviews
+		li: a(href="/articles/what-i-learned-about-teamwork-from-consulting.html") What I learned about teamwork from working on a turbulent project
+	h3 Events
+	ul.majorlist
+		li: a(href="/articles/ford-cfo-bob-shanks.html") Bob Shanks, Ford CFO
+		li: a(href="/articles/pplx-max-levchin-oct-29-berkeley.html") Max Levchin, Oct 29, Berkeley
+		li: a(href="/articles/drew-houston.html") Drew Houston, Oct 14, Berkeley
+		li: a(href="/articles/jeff-queisser-and-sam-ghods.html") Jeff Queisser and Sam Ghods, 2 of 4 co-founders of Box, Sep 26, Berkeley
+
+	h3 Academic
+	ul.majorlist
+		li: a(href="/articles/todd-m-gureckis.html") Self-directed learning: Understanding the interactions between decision making, learning, and memory
+		li: a(href="/articles/prototyping-potential-futures.html") BiD: Prototyping Potential Futures
+		li: a(href="/articles/UIST-talk-previews-Round-2-at-BiD.html") UIST talk previews Round 2 at BiD
 
 
-h3 Lists
-ul.majorlist
-	li: a(href="/articles/one-line-book-reviews.html") One-Line UX Book Reviews
+	h3 Conferences
+	ul.majorlist
+		li: a(href="/articles/gigaom-roadmap-2014.html") Gigaom Roadmap 2014
+		li: a(href="/articles/yc-startup-school-2014.html") YC Startup School 2014
+		li: a(href="/articles/envisioning-the-future-of-detroit.html") Envisioning the Future of Detroit
+		li: a(href="/articles/warmgun-2013.html") Warmgun 2013 notes
 
-h3 Events
-ul.majorlist
-	li: a(href="/articles/ford-cfo-bob-shanks.html") Bob Shanks, Ford CFO
-	li: a(href="/articles/pplx-max-levchin-oct-29-berkeley.html") Max Levchin, Oct 29, Berkeley
-	li: a(href="/articles/drew-houston.html") Drew Houston, Oct 14, Berkeley
-	li: a(href="/articles/jeff-queisser-and-sam-ghods.html") Jeff Queisser and Sam Ghods, 2 of 4 co-founders of Box, Sep 26, Berkeley
-
-h3 Academic
-ul.majorlist
-	li: a(href="/articles/todd-m-gureckis.html") Self-directed learning: Understanding the interactions between decision making, learning, and memory
-	li: a(href="/articles/prototyping-potential-futures.html") BiD: Prototyping Potential Futures
-	li: a(href="/articles/UIST-talk-previews-Round-2-at-BiD.html") UIST talk previews Round 2 at BiD
-
-
-h3 Conferences
-ul.majorlist
-	li: a(href="/articles/gigaom-roadmap-2014.html") Gigaom Roadmap 2014
-	li: a(href="/articles/yc-startup-school-2014.html") YC Startup School 2014
-	li: a(href="/articles/envisioning-the-future-of-detroit.html") Envisioning the Future of Detroit
-	li: a(href="/articles/warmgun-2013.html") Warmgun 2013 notes
-
-h3 Software
-ul.majorlist
-	li: a(href="/articles/html-slideshow.html") HTML slideshow systems
+	h3 Software
+	ul.majorlist
+		li: a(href="/articles/html-slideshow.html") HTML slideshow systems
 
