--- a/_harpapp/public/index.jade
+++ b/_harpapp/public/index.jade
@@ -26,10 +26,9 @@ section.menu
   div.container
     nav.unit.one-of-three
       ul
-        li Work
+        //li Work
         li: a(href="/a/about.html") About
         li: a(href="/articles/") Articles
-        li: a(href="/resume") Résumé
         //li: a(href="/a/previously.html") Case Study: Hejia
         //li: a(href="/a/previously.html") Case Study: TinyTerms
         li: a(href="/a/previously.html") Projects
@@ -39,18 +38,21 @@ section.menu
         //li: a(href="#") Shop
     nav.unit.two-of-three
       ul
-        li Hi again
+        //li Hi again
         li.mutedtext.
-          I'm Andrew Sierran Chen. I spend a lot of time conceptualizing, designing, and testing technology products.
+          I'm Andrew Shukun Chen. I spend a lot of time conceptualizing, contemplating, and designing technology products.
 
-          I previously interned in Beijing, talked to President Obama, tested the Cr-48 for Google, started two startups, and lived in a van. I now excitedly work on TinyTerms, using design to build a better way of writing and reading legal contracts. If you're interested in society, law, or design, you should <a href="mailto:andrewnonumbers+site@gmail.com">talk to me</a>.
+          I previously interned in Beijing, talked to President Obama, lived in a van, tested the Cr-48 for Google, and started two startups. I now work on TinyTerms alongside the best team in the world, using design to build a better way to write and read legal contracts. If you're interested in society, law, or design, you should <a href="mailto:andrewnonumbers+site@gmail.com">talk to me &#10166;</a>.
 
-          Besides design, I like to keep myself current on psychology (particularly cognition & memory, behavior, and personality), societal issues, education issues, sustainability, and Kanye West. I am a maker, hacker, philosopher, and critical thinker.
+          Besides design, I like to keep myself current on psychology (particularly cognition & memory, behavior, and personality), societal issues, education issues, sustainability issues, and Kanye West. I'm a designer, maker, hacker, and critical thinker.
 
-          My latest project is TinyTerms, which was born out of Startup Weekend Legaltech and won Github's Judge's Choice award.
+          <!--My latest project is TinyTerms, which was born out of Startup Weekend Legaltech and won Github's Judge's Choice award.
 
-          I post occasionally provocative things to <a href="https://twitter.com/_ndrw">Twitter</a> and infrequent photos to <a href="https://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a> and <a href="http://instagram.com/andrewnonumbers">Instagram</a>.
+          I post occasionally provocative things to <a href="https://twitter.com/_ndrw">Twitter</a> and infrequent photos to <a href="https://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a> and <a href="http://instagram.com/andrewnonumbers">Instagram</a>.-->
           
+    div.unit.span-grid
+      footer.sitewide
+        p Made by <a href="/">ndrw.me</a>
 
     //
       nav.unit.one-of-three
@@ -76,3 +78,4 @@ section.menu
           li: a(href="http://2010-2013.ndrw.me") 2010-2013.ndrw.me
           li: a(href="http://2008-2009.ndrw.me") 2008-2009.ndrw.me
 
+      
