--- a/_harpapp/public/project/index.jade
+++ b/_harpapp/public/project/index.jade
@@ -77,7 +77,7 @@ section.projects
       p.
         Hejia is one of the top ERP companies in China, providing small and medium-sized businesses with software to run their businesses. The recent growth of mobile devices has created a demand for access to ERP and information capture on the go.
       h4 My role
-      p Intern, UI (mobile)
+      p Intern, UI
 
   section.a-project.e
     div.unit.three-of-four
@@ -115,9 +115,9 @@ section.projects
     div.unit.one-of-four
       h3 CMU iOS app
       p.
-        This is a demo of something I built back at my first ever hackathon when I was in high school. 
+        This is a demo of something I built back at my first ever hackathon.
       h4 How it works
       p.
         The iOS app pulls in data from RSS feeds made available by Carnegie Mellon University and displays them in a single app, creating a fast and slick experience for prospective students to engage with the school, learn about what's happening on campus, and plan a visit.
       h4 My role
-      p Everything
+      p Design
