--- a/_harpapp/public/resume/index.ejs
+++ b/_harpapp/public/resume/index.ejs
@@ -16,20 +16,25 @@
 			<h2 class="byline"><%= header.headline %></h2>
 		</header>
 
-		<ul class="contact-info unit span-grid">
-			<li>
-				<p><a href="tel:4107756326"><%= contact.phone %></a></p>
-			</li>
-			<li>
-				<p><a href="mailto:andrew@ndrw.me?cc=andrewnonumbers@gmail.com&body=Hey%20I%20saw%20your%20resume%20"><%= contact.email %></a></p>
-			</li>
-			<li>
-				<p><a class="lmk-twitter" href="https://twitter.com/_ndrw">Twitter</a></p>
-			</li>
-			<li>
-				<p><a class="lmk-linkedin" href="http://www.linkedin.com/in/andrewnonumbers">LinkedIn</a></p>
-			</li>
-		</ul>
+
+		<div class="contact-info">
+			<div class="unit one-of-five">
+				<span class="legend">Say "hi"!</span>
+			</div>
+			<div class="unit one-of-five">
+				<span><a href="tel:4107756326"><%= contact.phone %></a></span>
+			</div>
+			<div class="unit one-of-five">
+				<span><a href="mailto:andrew@ndrw.me?cc=andrewnonumbers@gmail.com&body=Hey%20I%20saw%20your%20resume%20"><%= contact.email %></a></span>
+			</div>
+			<div class="unit one-of-five">
+				<span><a class="lmk-twitter" href="https://twitter.com/_ndrw">Twitter</a></span>
+			</div>
+			<div class="unit one-of-five">
+				<span><a class="lmk-linkedin" href="http://www.linkedin.com/in/andrewnonumbers">LinkedIn</a></span>
+			</div>	
+		</div>
+
 
 		<div class="unit four-of-five" id="main-body">
 
@@ -88,26 +93,6 @@
 		</div>
 
 		<div class="unit one-of-five rightbar">
-			<!--<h2>Skills</h2>
-
-
-			<ul>
-				<h4>Design skills</h4>
-				<% for(var i=0; i<skillsDesign.length; i++) {%>
-						<li><%= skillsDesign[i] %></li>
-				<% } %>
-			</ul>
-
-
-			<ul>
-				<h4>Tech skills</h4>
-				<% for(var i=0; i<skillsTech.length; i++) {%>
-						<li><%= skillsTech[i] %></li>
-				<% } %>
-			</ul>
-			<!--<p><a href="http://space.ndrw.me/#skills">See what I think UX design is &rsaquo;&rsaquo;</a></p>-->
-
-			
 			<ul id="volunteer-experience">
 				<h2>Volunteer Experience</h2>
 				<% for(var i=0; i<volunteer.length; i++) {%>
@@ -116,6 +101,26 @@
 						<p><%= volunteer[i].description %></p>
 				<% } %>
 			</ul>
+
+
+			<h2>What I Do</h2>
+
+
+			<ul>
+				<h4>Design</h4>
+				<% for(var i=0; i<skillsDesign.length; i++) {%>
+						<li><%= skillsDesign[i] %></li>
+				<% } %>
+			</ul>
+
+
+			<ul>
+				<h4>Technical</h4>
+				<% for(var i=0; i<skillsTech.length; i++) {%>
+						<li><%= skillsTech[i] %></li>
+				<% } %>
+			</ul>
+			<!--<p><a href="http://space.ndrw.me/#skills">See what I think UX design is &rsaquo;&rsaquo;</a></p>-->
 			
 
 			<!--<h2>Words people would use to describe me</h2>
@@ -147,6 +152,7 @@
 				<ul>
 					<li>Made with HTML5, LESS, EJS, Harp.js, and Toast grid</li>
 					<li>See how it was made at <a href="https://github.com/AndrewNoNumbers/weeResume">GitHub</a></li>
+					<!--<li>See an <a href="http://space.ndrw.me/#skills">older version</a> of my resume</li>-->
 				</ul>
 			</footer>
 		</div>
