some more edits before Amazon portfolio review

--- a/_harpapp/public/index.jade
+++ b/_harpapp/public/index.jade
@@ -28,6 +28,7 @@ section.menu
       ul
         //li Work
         li: a(href="/a/about.html") About
+        li: a(href="/resume") Résumé
         li: a(href="/articles/") Articles
         //li: a(href="/a/previously.html") Case Study: Hejia
         //li: a(href="/a/previously.html") Case Study: TinyTerms
@@ -40,7 +41,7 @@ section.menu
       ul
         //li Hi again
         li.mutedtext.
-          I'm Andrew Shukun Chen. I spend a lot of time conceptualizing, contemplating, and designing technology products.
+          Hey, I'm Andrew S Chen. I spend a lot of time conceptualizing, contemplating, and designing technology products.
 
           I previously interned in Beijing, talked to President Obama, lived in a van, tested the Cr-48 for Google, and started two startups. I now work on TinyTerms alongside the best team in the world, using design to build a better way to write and read legal contracts. If you're interested in society, law, or design, you should <a href="mailto:andrewnonumbers+site@gmail.com">talk to me &#10166;</a>.
 
