--- a/_harpapp/public/_layout.jade
+++ b/_harpapp/public/_layout.jade
@@ -1,7 +1,7 @@
 !!! 5
 html
   head
-    link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic")
+    link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,400italic|Abril+Fatface|Montserrat")
     link(rel="stylesheet", href="/firstToastGrid.css")
     //CSS reset + grid
     link(rel="stylesheet", href="/main.css")
