--- a/_harpapp/public/resume/firstToast.less
+++ b/_harpapp/public/resume/firstToast.less
@@ -48,6 +48,8 @@ background:transparent;
 }
 body {
 line-height:1;
+
+
 }
 article,aside,details,figcaption,figure,
 footer,header,hgroup,menu,nav,section {
@@ -124,7 +126,7 @@ vertical-align:middle;
 	*display: inline;
 	*zoom: 1;
 	vertical-align: top;
-	margin-left: 3%;
+	margin-left: 0%;
 	margin-right: -.25em;
 	/* Clearfix */
 	overflow: hidden;
@@ -215,6 +217,8 @@ hr {
 	margin-top: -1px;
 }
 
+
+
 /*-----------------------------------*\
 	$MAIN
 \*-----------------------------------*/
@@ -224,28 +228,7 @@ html {
 	font-weight: 300;
 }
 
-@media screen and (max-width: 650px) {
-	html {
-		font-size: 100%;
-	}
-	.fullname {
-		font-size: 2.1rem;
-	}
-	header, .contact-info {
-		text-align: left;
-	}
-	.contact-info li {
-		margin: 0 50px;
-		margin-top: 20px;
-	}
-}
-
-/*-----------------------------------*\
-	$ADDTIONAL ELEMENTS
-\*-----------------------------------*/
-
-
-@main: #FFC83D;
+@main: #FFD500;
 @main-lighten: lighten(@main, 20%);
 @main-fade: fade(@main, 20%);
 @gray: #A2A2A2;
@@ -256,16 +239,37 @@ html {
 	font-size: 3.4rem;
 	margin-left: 4px;
 	margin-top: 22px;
+
+	letter-spacing: 0.1rem;
+
+	color: black;
+}
+
+header {
+
+	margin-top: 10px;
+	padding-top: 5px;
+	padding-bottom: 30px;
+
+	/*background-image: url('cloud3.jpg');*/
+
+	border-radius: 1px;
 }
 
 .byline {
-
+	color: @gray;
 }
 
 header, .contact-info {
 	text-align: center;
 }
 
+
+
+
+.about-summary {
+	margin-top: -6px;
+}
 	
 /*==Contact info block 1 lite==*/
 
@@ -314,14 +318,13 @@ header, .contact-info {
 .contact-info {
 	background-color: @main;
 
-	border-radius: 0px;
+	border-radius: 1px;
 
 	margin-top: 20px;
-	margin-bottom: 40px;
+	margin-bottom: 35px;
 
 	border-bottom: 4px solid @main-lighten;
 
-	padding: 0 50px 0 40px; 
 }
 
 .contact-info .unit {
@@ -335,7 +338,7 @@ header, .contact-info {
 	/*border: 1px solid;
 	border-radius: 20px;*/
 
-	color: @main-lighten;
+	color: white;
 	border-color: @main-lighten;
 
 	font-size: 1rem;
@@ -401,20 +404,6 @@ header, .contact-info {
 
 
 
-/*header {
-	border-top: 1px dashed #797979;
-	margin-top: 10px;
-	padding-top: 15px;
-}
-.contact-info {
-	border-bottom: 1px dashed #797979;
-	padding-bottom: 10px;
-	margin-bottom: 30px;
-}*/
-
-
-
-
 
 
 
@@ -429,6 +418,9 @@ h2 {
 
 a {
 	color: @main;
+}
+a:hover {
+	color: @main-lighten;
 }
 
 
@@ -535,4 +527,20 @@ footer ul {
 	border-bottom: 1px solid rgba(0,0,0,.1);
 	text-align: center;
 	padding: 30px 0;
+}
+
+
+
+
+@media screen and (max-width: 650px) {
+	html {
+		font-size: 100%;
+	}
+	.fullname {
+		font-size: 1.6rem;
+	}
+	.contact-info li {
+		margin: 0 50px;
+		margin-top: 20px;
+	}
 }
