--- a/_harpapp/public/resume/firstToast.less
+++ b/_harpapp/public/resume/firstToast.less
@@ -544,3 +544,35 @@ footer ul {
 		margin-top: 20px;
 	}
 }
+
+
+
+@media print {
+	/*make top margin less*/
+
+
+	body {
+		font-size: 8pt;
+	}
+
+	/*makes the contact-info border bottom less exagerrated*/
+	.contact-info {
+		border-bottom: 1px solid @main-lighten;
+	}
+
+	/*this gets overridden by Chrome's default print stylesheet anyway*/
+	.dates {
+		font-size: 0.7rem;
+
+		border: 0px solid;
+		border-radius: 5px;
+		padding: 4px;
+
+		background-color: black;
+		color: white;	
+
+		letter-spacing: 0.07rem;
+		text-transform: uppercase;
+	}
+
+}
